--- a/xianjianqixia.html
+++ b/xianjianqixia.html
@@ -6,10 +6,30 @@
     <style>
      .text1
      {text-align:center; color:blue;}   
-
+     h1
+     {background-color:yellow;font-family:"楷体",“宋体”,“Times New Roman”;}
     </style>
   </head>
   <body>
-    <h1 class="text1">仙剑奇侠传系列</h1>
+    <h1 class="text1">仙剑奇侠传系列介绍</h1>
+    <h3>仙剑奇侠传</h3>
+    <p>该作是仙剑奇侠传的第一部作品，于1995年7月发布，后针对windows98系统于1997年重新发布了有少量修改的“98柔情版”。
+        游戏讲述了平凡的客栈小伙计李逍遥因为机缘巧合结识了女娲族后裔赵灵儿。
+        赵灵儿所居之仙灵岛意外遭人袭击，李逍遥遂担任起护送灵儿往苗疆寻母的重任。
+        在旅程中，李逍遥先后结识了林月如、阿奴。在赵灵儿帮助苗人祈雨解旱、惩奸除恶的过程之中，赵灵儿的身世之谜以及她母亲的下落，也终究水落石出。
+        此时，拜月教主的阴谋摆在众人的眼前，李逍遥、赵灵儿等人却不知这与拜月教主一战，将会铸成一段永恒的悲剧。</p>
+    <h3>新仙剑奇侠传</h3>
+    <p>《新仙剑奇侠传》于2001年07月15日发行。
+        该作是以《仙剑奇侠传》第一代游戏为基础重新制作，润色了部分剧情，大大提高了大部分场景的画面质量。
+        所有角色如主角、敌人、神鬼灵兽等一律依角色的个性重新绘制；游戏剧本除原剧情架构外，也增加了部分支线和隐藏结局。</p>
+    <h3>仙剑奇侠传二</h3>
+    <p>《仙剑奇侠传二》于2003年1月上市。二代故事发生在一代的8年之后，剧情紧接一代，
+        围绕王小虎、沈欺霜、苏媚、李忆如展开，讲述四人交织出一段错综复杂的故事。
+        一代的主角以及全新人物在二代中出现，交待了前后两代发生过以及即将发生的感情恩怨纠葛。
+        本作首次出现了御灵、虎煞、阵术、养蛊、喂毒等多种战斗和养成系统，战斗采用45度视角斜向以及全动态同步回合制的攻防方式。</p>
+    <h3>仙剑奇侠传三</h3>
+    <p>《仙剑奇侠传三》是国产单机角色扮演游戏《仙剑奇侠传》系列的第三代作品，由大宇资讯股份有限公司旗下的软星科技（上海）有限公司研发，于2003年8月4日在中国内地正式发行。
+        本作的主题为“轮回”，故事环绕在两把剑，述说主角两个前世与今生的纠葛。剧情年代设为《仙剑奇侠传》故事初代50年前、《仙剑奇侠传二》58年前。
+        本作被评为2003年最出色的RPG之一，后于2008年被改编成同名电视剧。</p>
   </body>
 </html>
