--- a/xianjianqixia.html
+++ b/xianjianqixia.html
@@ -31,5 +31,36 @@
     <p>《仙剑奇侠传三》是国产单机角色扮演游戏《仙剑奇侠传》系列的第三代作品，由大宇资讯股份有限公司旗下的软星科技（上海）有限公司研发，于2003年8月4日在中国内地正式发行。
         本作的主题为“轮回”，故事环绕在两把剑，述说主角两个前世与今生的纠葛。剧情年代设为《仙剑奇侠传》故事初代50年前、《仙剑奇侠传二》58年前。
         本作被评为2003年最出色的RPG之一，后于2008年被改编成同名电视剧。</p>
+    <h3>仙剑奇侠传三外传：问情篇</h3>
+    <p>《仙剑奇侠传三外传：问情篇》（简称“三外”或“问情篇”）是由大宇资讯旗下的软星科技（上海）有限公司研发，
+      于2004年推出的一款单机角色扮演游戏，是《仙剑奇侠传》系列的第一款外传性质作品。
+      作为外传，它的立意就是解开前作中那些未解开的谜团，将仙剑系列作品做一个总结性的贯穿，连接起前三作的剧情，起着承上启下的作用。
+      在游戏中《仙剑奇侠传三》的主角及《仙剑奇侠传一》的不少角色都出现在在主线或分支剧情中。
+      因此，《仙剑奇侠传三外传·问情篇》既是一个新的故事，也是一场旧的回忆。</p>
+    <h3>仙剑奇侠传四</h3>
+    <p>《仙剑奇侠传四》是由软星科技（上海）有限公司研发，寰宇之星发行代理的角色扮演单机游戏，
+      也是系列单机游戏《仙剑奇侠传》的第五部作品，于2007年8月1日上市。
+      游戏的主题为“寻仙”，并首次以3D真人比例制作，讲述了少年云天河结识陵墓大盗韩菱纱、寿阳千金柳梦璃和琼华弟子慕容紫英
+      以及在寻仙的路上遇到的种种经历，并得出“欲求仙道先修人道”结论的故事。</p>
+    <h3>仙剑奇侠传五</h3>
+    <p>《仙剑奇侠传五》是由大宇资讯旗下软星科技（北京）有限公司所制作的一款国产单机中文角色扮演电脑游戏。
+      本作是《仙剑奇侠传》系列的第六部作品，主题为“心愿”，剧情发生在《仙剑奇侠传》初代剧情的30多年后，另有其外传性质作品《仙剑奇侠传五前传》。除了游戏本体之外，还有三部DLC，分别为《魔灵幻像》《暮雨今夕》《前尘若梦》。 [1] 
+      游戏已于2011年7月7日两岸三地同步上市  。根据游戏改编的电视剧《仙剑云之凡》于2015年7月10日开机。</p>
+    <h3>仙剑奇侠传五前传</h3>
+    <p>《仙剑奇侠传五前传》是由大宇资讯旗下软星科技（北京）有限公司研发的一款电脑单机角色扮演游戏。
+      本作是《仙剑奇侠传》系列的第七部作品，故事主题为“牵绊”，剧情发生年代为《仙剑奇侠传五》故事背景二十多年前。
+      游戏已于2013年1月15日上市 ，另有DLC《梦华幻斗》于2013年6月25日发布 。</p>
+    <h3></h3>
+    <p>《仙剑奇侠传六》是由大宇资讯旗下软星科技（北京）有限公司制作一款单机角色扮演电脑游戏，已于2015年7月8日上市。
+      该作是《仙剑奇侠传》系列游戏的第八部单机作品，同时也是仙剑二十周年之作，讲述了越今朝和越祈在为寻找丢失的某样东西时，
+      无意中揭开了尘封的秘密的故事。</p>
+    <h3></h3>
+    <p>《仙剑奇侠传七》是国产单机系列游戏《仙剑奇侠传》的第九部作品。
+      2017年5月23日，该作正式立项，并采用虚幻4引擎制作。
+      2019年5月27日，该作在Nvidia Computex2019上公开了光追演示视频。
+      2020年12月29日，该作发布由周深演唱的主题曲《相守》。
+      2021年1月6日，开启试玩预约；1月15日，试玩正式开启。
+      2021年7月8日，与英伟达共同发布新的光追演示视频.预计2021年第四季或2022年初发布。</p>
+    
   </body>
 </html>
