--- a/xianjianqixia.html
+++ b/xianjianqixia.html
@@ -30,7 +30,7 @@
      }
     </style>
   </head>
-  <body>
+  <body background="https://note.youdao.com/yws/api/personal/file/WEBf80072cda656afc8dcb5c6fc4582654e?method=download&shareKey=2a808c9e2ea3ab79c5481f6501d95f58">
     <h1>仙剑奇侠传系列介绍</h1>
     <h3>仙剑奇侠传</h3>
     <div align="center">
