--- a/总介绍.html
+++ b/总介绍.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>仙剑奇侠传</title>
+    <title>总介绍</title>
     <style>
      h1
      {text-align:center; 
