--- a/仙剑奇侠传一.html
+++ b/仙剑奇侠传一.html
@@ -12,17 +12,16 @@
      }
      h3
      {text-align:center; 
-      background-color:rgba(10, 195, 241, 0.973);
+      background-color:rgba(69, 233, 245, 0.938);
       font-family:"楷体",“宋体”,“Times New Roman”;
      }
     </style>
   </head>
-  <body>
+  <body background="https://note.youdao.com/yws/api/personal/file/WEB6968e36373a1270e325ebbd8075fc64e?method=download&shareKey=b9650551edc12bbcdee06a6d3aa06953">
     <h1>仙剑奇侠传</h1>
     <h3>剧情简述</h3>
     <div align="center">
       <img border="0" src ="https://note.youdao.com/yws/api/personal/file/WEBffc4e1596922919de548d102d664cc43?method=download&shareKey=c013a9583ff35c60873a0806c4540f4c"  width=500" height="300" alt=“图片错误”>
-      
     </div>
     <p>仙三外传结束二十年之后，李逍遥在仙灵岛偶遇赵灵儿，并娶了赵灵儿为妻。却被害失忆，与赵灵儿一起回苗疆寻母。
        期间蒙司徒钟（酒剑仙）传授蜀山剑法，并学得其父绝学“飞龙探云手”。
