--- a/index.html
+++ b/index.html
@@ -1,36 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>仙剑奇侠传</title>
-    <style>
-     h1
-     {text-align:center; 
-      color:blue;
-      background-color:yellow;
-      font-family:"楷体",“宋体”,“Times New Roman”;
-     }
-     h3
-     {text-align:center; 
-      background-color:rgba(10, 195, 241, 0.973);
-      font-family:"楷体",“宋体”,“Times New Roman”;
-     }
-     p
-     {padding-top:25px;
-      padding-bottom:25px;
-      padding-right:50px;
-      padding-left:50px;
-      border-style:solid dashed;
-      border-width:5px;
-      border-color:red blue;
-      margin-top:20px;
-      margin-bottom:20px;
-      margin-right:50px;
-      margin-left:50px;
-     }
-    </style>
-  </head>
-  <body background="https://note.youdao.com/yws/api/personal/file/WEBf80072cda656afc8dcb5c6fc4582654e?method=download&shareKey=2a808c9e2ea3ab79c5481f6501d95f58">
+---
+layout: default
+title: 总介绍
+---
     <h1>仙剑奇侠传系列介绍</h1>
     <h3>仙剑奇侠传</h3>
     <div align="center">
@@ -131,6 +102,3 @@
       2020年12月29日，该作发布由周深演唱的主题曲《相守》。
       2021年1月6日，开启试玩预约；1月15日，试玩正式开启。
       2021年7月8日，与英伟达共同发布新的光追演示视频.预计2021年第四季或2022年初发布。</p>
-    
-  </body>
-</html>
