--- a/仙剑奇侠传二.html
+++ b/仙剑奇侠传二.html
@@ -31,11 +31,10 @@ title: 仙剑奇侠传二
     <h4>苏媚</h4> <img border="0" src ="https://note.youdao.com/yws/api/personal/file/WEB5cc28411614c1f2e593166f68ba55be3?method=download&shareKey=e363949d6a28c216f169d017b2fd7f7f"  width=500" height="300" alt=“图片错误”>
     <p>《仙剑奇侠传二》第二女主角。个性直接坦率、爽朗无心机，带给人相当骄傲任性的感觉，狠辣与智能兼备。由于从小的孤苦无依，只有互相利
       用才能生存的环境，在心中筑起了不易信任人的防备心。其它部分则是谜团。</p>
-    <h4>李忆如</h4> <img border="0" src ="https://note.youdao.com/yws/api/personal/file/WEB8ddb7ba76061994dcbf0f2d3fee3ff47?method=download&shareKey=f04ef22506acada45e14115fae80478e"  width=500" height="300" alt=“图片错误”>
-    <p>《仙剑奇侠传一》第三女主角。白李逍遥与赵灵儿之女，乃神族女娲的后裔，本身有着强大的灵力潜能却尚未开发。从小没有母亲陪伴，父亲也
-      久久才能看到一次，但是在李大娘细心的教导与仙灵岛优良的环境下，养成了爽朗率直、胸襟宽大的个性，好奇心强，爱好和平，厌恶争斗，对人
-      没戒心，是个调皮可爱、无心机的可爱女孩。也由于李逍遥的关系，从小就是众人手上的心肝宝贝，所以对长辈比较没大没小。
-      又因为自小在水月宫长大，世面见得不多，相信人性本善，常幻想外边的世界，新鲜好玩。而不经大脑的调皮捣蛋、没有修饰的说话方式，有时叫人头疼。</p>
+    <h4>喻南松</h4> <img border="0" src ="https://note.youdao.com/yws/api/personal/file/WEB8ddb7ba76061994dcbf0f2d3fee3ff47?method=download&shareKey=f04ef22506acada45e14115fae80478e"  width=500" height="300" alt=“图片错误”>
+    <p>《仙剑奇侠传二》第二男主角。山东喻家庄人，幼年时全家惨遭魔族杀害。少年时与王小虎、沈欺霜结为好友，并有幸被千叶禅师收入门下。喻南
+      松等千叶门人四处除魔卫道，为解救苍生做出巨大贡献。武艺高超，习得师父千叶禅师所传上等法术，凭着能力成为千叶得力助手，实质却被千叶
+      利用。最后因为与王小虎三人交战并战败，被师父千叶禅师杀死，在禁咒空间壮烈牺牲。</p>
     <h3>游戏评价</h3>
     <p>仙二销量不错，但口碑却不佳。作为时隔八年的仙剑续作，玩家们对仙二充满了期待，期待仙二能够再创辉煌。
       “等待，只为一次更凄美的感动”。然而，玩家等来了是和新仙剑如出一辙全无新意的系统引擎、毫无改进的画面风格、
