add two new css

--- a/仙剑奇侠传一.html
+++ b/仙剑奇侠传一.html
@@ -2,44 +2,54 @@
 layout: page1
 title: 仙剑奇侠传一
 ---
-    <h1>仙剑奇侠传</h1>
-    <h3>剧情简述</h3>
-    <div align="center">
-      <img border="0" src ="https://note.youdao.com/yws/api/personal/file/WEBffc4e1596922919de548d102d664cc43?method=download&shareKey=c013a9583ff35c60873a0806c4540f4c"  alt=“图片错误”>
-    </div>
-    <p>仙三外传结束二十年之后，李逍遥在仙灵岛偶遇赵灵儿，并娶了赵灵儿为妻。却被害失忆，与赵灵儿一起回苗疆寻母。
-       期间蒙司徒钟（酒剑仙）传授蜀山剑法，并学得其父绝学“飞龙探云手”。
-       而后，在林家堡遇到千金林月如。比武招亲上获胜之后，与林月如寻找失踪的赵灵儿。
-       寻找期间，杀害苏媚（仙二女主之一）之父蛇妖之母狐妖，破获扬州女飞贼案。后赵灵儿被独孤剑圣（独孤宇云）误以为妖投入锁妖塔。
-       李逍遥和林月如为救赵灵儿，闯入锁妖塔，并毁了锁妖塔。锁妖塔坍塌时，林月如天灵受损，赵灵儿产下李忆如昏迷。
-       在寻药医治林月如和赵灵儿过程中，结识了阿奴。
-       水魔兽被拜月教主复活，赵灵儿与水魔兽同归于尽，林月如得以圣姑三十六只傀儡虫续命救活。
-       仙一故事结束。</p>
-    <h3>主角介绍</h3>
-    <h4>李逍遥</h4> <img border="0" src ="https://note.youdao.com/yws/api/personal/file/WEB6fe3d36b2e41e740367b941f217fe272?method=download&shareKey=b04994f75e4e21c2975db19e2c9bd828"  alt=“图片错误”>
-    <p>《仙剑奇侠传一》男主角。一个天资聪颖的乡下客栈店小二，因一壶酒被酒剑仙传授了蜀山仙剑派剑术，
-      在仙灵岛与赵灵儿相遇，自此经历重重磨难成长为一代旷世奇侠。后出任蜀山掌门，取道号一贫，从此御剑行遍天下，行侠仗义、斩妖除魔。
-      多年后因魔教之乱，故引咎卸职，成为蜀山七圣之一。而后虽心力交瘁，但仍竭力保护天下苍生。</p>  
-    <h4>赵灵儿</h4> <img border="0" src ="https://note.youdao.com/yws/api/personal/file/WEBee29d6cb5ed039b545a4cf6a91dc1d0b?method=download&shareKey=08a1a92f182f5c0d269c17b3eecd06a3"  alt=“图片错误”>
-    <p>《仙剑奇侠传一》第一女主角。受天命眷顾，女娲族裔与人类共生之女。自幼与世隔绝，宛若池中白莲的脱俗少女，
-      跟随姥姥隐居仙灵岛修炼，躲避仇人的追杀。最终为了消灭拜月水魔兽，依然与其同归于尽，徒留万缕相思，让爱她的人无限怀念。</p>
-    <h4>林月如</h4> <img border="0" src ="https://note.youdao.com/yws/api/personal/file/WEB5cc28411614c1f2e593166f68ba55be3?method=download&shareKey=e363949d6a28c216f169d017b2fd7f7f"  alt=“图片错误”>
-    <p>《仙剑奇侠传一》第二女主角。南武林盟主林天南独女，后为蜀山派掌门李逍遥夫人。天资灵秀，聪敏慧黠，情深义重。
-      身为江南武林魁首林家堡之武门千金，与李逍遥不打不相识，并在此后的寻人旅途中相知相恋。
-      在经历过重重艰辛和生离死别后，二人终于携手而共结连理，与高堂娇儿共享天伦。</p>
-    <h4>阿奴</h4> <img border="0" src ="https://note.youdao.com/yws/api/personal/file/WEB8ddb7ba76061994dcbf0f2d3fee3ff47?method=download&shareKey=f04ef22506acada45e14115fae80478e"  alt=“图片错误”>
-    <p>《仙剑奇侠传一》第三女主角。白苗族的少主。外表一派天真烂漫，娇俏可爱，施用巫术毒蛊的手段却叫人毛骨悚然。对李逍遥一往情深，
-      但逍遥已有所爱，只得默默伴随一旁。后成为巫月神教的教主，担任新一代圣姑，人称“海棠夫人”。收李逍遥的外孙女小蛮为徒。</p>
-    <h3>游戏评价(该作共分为三个版本，其中“DOS版”和“98柔情版”差别不大，故归为一作)</h3>
-    <h4>《仙剑奇侠传DOS版》</h4>
-    <p>1995年7月10日出品（故常被称作“仙剑95版”），由大宇资讯狂徒创作群制作，是影响了整整一代玩家的游戏大作。
-      发布有磁盘版和光盘版，但由于磁盘容量不足，因此有进行删减。本作自面世以来就长盛不衰，在游戏史上以惊人的生命力屹立十多年不倒。
-      感人的剧情、动情的音乐、还有那优雅的诗词至今仍让老一辈的玩家难以忘怀。游戏的主角李逍遥、赵灵儿、林月如、阿奴，也成了游戏界的明星人物。
-      游戏的总策划兼编剧姚壮宪也被誉为“仙剑之父”。美中不足的是，最初的DOS版游戏中法术、道具等缺乏说明。
-      虽然有人认为《仙剑奇侠传》的巨大成功在后来客观上阻碍了其他国产游戏的创新和发展，但毫无疑问的是，
-      《仙剑奇侠传》是中国游戏史上一座重要的里程碑</p>
-    <h4>《仙剑奇侠传98版》</h4>
-    <p>1997年出品。仙剑98柔情篇是大宇于同年在大陆推出的仙剑Win95版之相应简体版，(网上所说的“95版”即繁体版本)
-      首发于1997年10月，这一版本也是在中国大陆流传得最广的仙剑一。游戏画面看上去和DOS版并无太多区别；增加了数个AVI动画；
-      增加了四首CD音轨，背景音乐由DOS内默认的FM音源（即RIX格式）变为MIDI格式。部分迷宫地图作了一定简化，少量对白被更改，
-      我方法术习得等级降低、BOSS生命降低。此外，所有道具加入了文字说明，这一点是非常实用的改进。 [2] </p>
+<h1>仙剑奇侠传</h1>
+<h3>剧情简述</h3>
+<div align="center">
+  <img border="0"
+    src="https://note.youdao.com/yws/api/personal/file/WEBffc4e1596922919de548d102d664cc43?method=download&shareKey=c013a9583ff35c60873a0806c4540f4c"
+    alt=“图片错误”>
+</div>
+<p>仙三外传结束二十年之后，李逍遥在仙灵岛偶遇赵灵儿，并娶了赵灵儿为妻。却被害失忆，与赵灵儿一起回苗疆寻母。
+  期间蒙司徒钟（酒剑仙）传授蜀山剑法，并学得其父绝学“飞龙探云手”。
+  而后，在林家堡遇到千金林月如。比武招亲上获胜之后，与林月如寻找失踪的赵灵儿。
+  寻找期间，杀害苏媚（仙二女主之一）之父蛇妖之母狐妖，破获扬州女飞贼案。后赵灵儿被独孤剑圣（独孤宇云）误以为妖投入锁妖塔。
+  李逍遥和林月如为救赵灵儿，闯入锁妖塔，并毁了锁妖塔。锁妖塔坍塌时，林月如天灵受损，赵灵儿产下李忆如昏迷。
+  在寻药医治林月如和赵灵儿过程中，结识了阿奴。
+  水魔兽被拜月教主复活，赵灵儿与水魔兽同归于尽，林月如得以圣姑三十六只傀儡虫续命救活。
+  仙一故事结束。</p>
+<h3>主角介绍</h3>
+<h4>李逍遥</h4> <img border="0"
+  src="https://note.youdao.com/yws/api/personal/file/WEB6fe3d36b2e41e740367b941f217fe272?method=download&shareKey=b04994f75e4e21c2975db19e2c9bd828"
+  alt=“图片错误”>
+<p>《仙剑奇侠传一》男主角。一个天资聪颖的乡下客栈店小二，因一壶酒被酒剑仙传授了蜀山仙剑派剑术，
+  在仙灵岛与赵灵儿相遇，自此经历重重磨难成长为一代旷世奇侠。后出任蜀山掌门，取道号一贫，从此御剑行遍天下，行侠仗义、斩妖除魔。
+  多年后因魔教之乱，故引咎卸职，成为蜀山七圣之一。而后虽心力交瘁，但仍竭力保护天下苍生。</p>
+<h4>赵灵儿</h4> <img border="0"
+  src="https://note.youdao.com/yws/api/personal/file/WEBee29d6cb5ed039b545a4cf6a91dc1d0b?method=download&shareKey=08a1a92f182f5c0d269c17b3eecd06a3"
+  alt=“图片错误”>
+<p>《仙剑奇侠传一》第一女主角。受天命眷顾，女娲族裔与人类共生之女。自幼与世隔绝，宛若池中白莲的脱俗少女，
+  跟随姥姥隐居仙灵岛修炼，躲避仇人的追杀。最终为了消灭拜月水魔兽，依然与其同归于尽，徒留万缕相思，让爱她的人无限怀念。</p>
+<h4>林月如</h4> <img border="0"
+  src="https://note.youdao.com/yws/api/personal/file/WEB5cc28411614c1f2e593166f68ba55be3?method=download&shareKey=e363949d6a28c216f169d017b2fd7f7f"
+  alt=“图片错误”>
+<p>《仙剑奇侠传一》第二女主角。南武林盟主林天南独女，后为蜀山派掌门李逍遥夫人。天资灵秀，聪敏慧黠，情深义重。
+  身为江南武林魁首林家堡之武门千金，与李逍遥不打不相识，并在此后的寻人旅途中相知相恋。
+  在经历过重重艰辛和生离死别后，二人终于携手而共结连理，与高堂娇儿共享天伦。</p>
+<h4>阿奴</h4> <img border="0"
+  src="https://note.youdao.com/yws/api/personal/file/WEB8ddb7ba76061994dcbf0f2d3fee3ff47?method=download&shareKey=f04ef22506acada45e14115fae80478e"
+  alt=“图片错误”>
+<p>《仙剑奇侠传一》第三女主角。白苗族的少主。外表一派天真烂漫，娇俏可爱，施用巫术毒蛊的手段却叫人毛骨悚然。对李逍遥一往情深，
+  但逍遥已有所爱，只得默默伴随一旁。后成为巫月神教的教主，担任新一代圣姑，人称“海棠夫人”。收李逍遥的外孙女小蛮为徒。</p>
+<h3>游戏评价(该作共分为三个版本，其中“DOS版”和“98柔情版”差别不大，故归为一作)</h3>
+<h4>《仙剑奇侠传DOS版》</h4>
+<p>1995年7月10日出品（故常被称作“仙剑95版”），由大宇资讯狂徒创作群制作，是影响了整整一代玩家的游戏大作。
+  发布有磁盘版和光盘版，但由于磁盘容量不足，因此有进行删减。本作自面世以来就长盛不衰，在游戏史上以惊人的生命力屹立十多年不倒。
+  感人的剧情、动情的音乐、还有那优雅的诗词至今仍让老一辈的玩家难以忘怀。游戏的主角李逍遥、赵灵儿、林月如、阿奴，也成了游戏界的明星人物。
+  游戏的总策划兼编剧姚壮宪也被誉为“仙剑之父”。美中不足的是，最初的DOS版游戏中法术、道具等缺乏说明。
+  虽然有人认为《仙剑奇侠传》的巨大成功在后来客观上阻碍了其他国产游戏的创新和发展，但毫无疑问的是，
+  《仙剑奇侠传》是中国游戏史上一座重要的里程碑</p>
+<h4>《仙剑奇侠传98版》</h4>
+<p>1997年出品。仙剑98柔情篇是大宇于同年在大陆推出的仙剑Win95版之相应简体版，(网上所说的“95版”即繁体版本)
+  首发于1997年10月，这一版本也是在中国大陆流传得最广的仙剑一。游戏画面看上去和DOS版并无太多区别；增加了数个AVI动画；
+  增加了四首CD音轨，背景音乐由DOS内默认的FM音源（即RIX格式）变为MIDI格式。部分迷宫地图作了一定简化，少量对白被更改，
+  我方法术习得等级降低、BOSS生命降低。此外，所有道具加入了文字说明，这一点是非常实用的改进。 [2] </p>
