--- a/仙剑奇侠传二.html
+++ b/仙剑奇侠传二.html
@@ -2,41 +2,50 @@
 layout: page1
 title: 仙剑奇侠传二
 ---
-    <h1>仙剑奇侠传二</h1>
-    <h3>剧情简述</h3>
-    <div align="center">
-      <img border="0" src ="https://note.youdao.com/yws/api/personal/file/WEBaa277ec6a3a8fb19be7b7515935f8554?method=download&shareKey=f6b4d45bc88ecad46c6bc44a381c9947"  alt=“图片错误”>
-    </div>
-    <p>二代故事是开始于一代结束的八年后，当初与李逍遥住在同一个村子的邻居——王小虎，已经是一位十八岁的成熟青年。想当年年纪虽小，却很有孝心，
-      不怕风浪独自上仙灵岛为父求药的事迹一直让大家们津津乐道，个性坚毅刚强，做事执着且有决心，从小视逍遥为偶像，虽然逍遥后来未收小虎为徒，
-      但小虎心中笃定要成为如李逍遥一样的大侠；名满江湖、除魔卫道，是永远不变的目标。
-      此时的神州大地，因为八年前锁妖塔崩毁，万千妖魔尽出，天下大乱，幸有一位得道高僧——千叶禅师的出现，广纳门徒成立大慈悲明宗，四处传道布施、
-      救灾救人，与蜀山仙剑派掌门人李逍遥同为正道的两大领袖。另一方面，魔族掌旗使孔璘，也趁机扩展势力，进行一项可怕的阴谋，意图染指人间。
-      王小虎与三位女主角便是在这样的一个时空背景，交织出一段充满亲情、友情、爱情的传奇故事。到底王小虎是如何踏上旅程、和几位女主角是如何结识
-      且发生动人情事、如何卷入一连串安排好的阴谋中而不自觉、又如何在千叶禅师的帮助下，对抗那可怕的魔头孔璘……</p>
-    <h3>主角介绍</h3>
-    <h4>王小虎</h4> <img border="0" src ="https://note.youdao.com/yws/api/personal/file/WEBbb876670ec13eafab070f00fbf939946?method=download&shareKey=da56afec7db8ef6f655866ac6ce38208"  alt=“图片错误”>
-    <p>《仙剑奇侠传二》男主角。初入江湖的热血少年，敢作敢当、负责任感、积极务实，正义感很强，相信人定胜天的道理。也由于个性使然，
-      所以讨厌所有可能危及周遭亲人、好友，甚至延伸到世人的恶势力，而这种强烈的使命感，也因为渐渐成熟与经历许多事情后，一股正气慢
-      慢延伸愿意保护所有善良的人与正确的事上面，却通常不考虑自己有没有能力对付。
-      在武功方面，在知道无望成为李逍遥徒弟，从10岁起跟着李大娘锻炼掌法外功，苦学苦练，根基扎实，目标笃定迈向强者之路，遇到挫折打
-      击也不屈不挠、勇往直前，希望能悟出属于自己的武学之道。</p>  
-    <h4>沈欺霜</h4> <img border="0" src ="https://note.youdao.com/yws/api/personal/file/WEBfe83f1f2d2098ae9ed6243ab4adc89d4?method=download&shareKey=2ac1ec1bcab64840e34f1857f8e7d9c5"  alt=“图片错误”>
-    <p>《仙剑奇侠传二》第一女主角。峨嵋山仙霞派掌门清柔师太座下弟子，与四位师姐妹合称「仙霞五奇」，排行第四，使得是仙霞派的剑术绝学，
-      近年来在江湖上四处斩妖除魔、行侠仗义而声名大噪。
-      个性较为害羞内向，温婉和顺，因为从小在父亲与师父严苛的教诲下成长，虽心中有主见与思想却不太敢表达，很在意别人的感受，所以显得略
-      微拘谨与软弱，对别人说话时很客气、斯文；但有勇气、韧性强、肯吃苦，其实是个外柔内刚的女生。
-      因为从小逆来顺受的环境造成了没有什么主要目标的生活态度，即使入了仙霞派后，习得上乘武学，也并没有想要追求武学顶峰的感觉。后来在
-      江湖中闯荡，才渐渐感觉到一种想要帮助人的心，觉得应该尽自己所能，帮助一切应该帮助的事情。</p>
-    <h4>苏媚</h4> <img border="0" src ="https://note.youdao.com/yws/api/personal/file/WEB93d7ddf3179f99b9aa0c85c3a82bcb9a?method=download&shareKey=9e24004001f2c4a02848c03e82e1b0ee"  alt=“图片错误”>
-    <p>《仙剑奇侠传二》第二女主角。个性直接坦率、爽朗无心机，带给人相当骄傲任性的感觉，狠辣与智能兼备。由于从小的孤苦无依，只有互相利
-      用才能生存的环境，在心中筑起了不易信任人的防备心。其它部分则是谜团。</p>
-    <h4>喻南松</h4> <img border="0" src ="https://note.youdao.com/yws/api/personal/file/WEB24be79b7ff33f518f450c7cf403fd82b?method=download&shareKey=b561800ec6f1c590976a695052420042"  alt=“图片错误”>
-    <p>《仙剑奇侠传二》第二男主角。山东喻家庄人，幼年时全家惨遭魔族杀害。少年时与王小虎、沈欺霜结为好友，并有幸被千叶禅师收入门下。喻南
-      松等千叶门人四处除魔卫道，为解救苍生做出巨大贡献。武艺高超，习得师父千叶禅师所传上等法术，凭着能力成为千叶得力助手，实质却被千叶
-      利用。最后因为与王小虎三人交战并战败，被师父千叶禅师杀死，在禁咒空间壮烈牺牲。</p>
-    <h3>游戏评价</h3>
-    <p>仙二销量不错，但口碑却不佳。作为时隔八年的仙剑续作，玩家们对仙二充满了期待，期待仙二能够再创辉煌。
-      “等待，只为一次更凄美的感动”。然而，玩家等来了是和新仙剑如出一辙全无新意的系统引擎、毫无改进的画面风格、
-      乏善可陈的除魔卫道。这一切让玩家的心理形成极大的落差，他们接受不了，于是他们批判，批判仙二，不配“仙剑奇侠传”这个名字。</p>
-    
+<h1>仙剑奇侠传二</h1>
+<h3>剧情简述</h3>
+<div align="center">
+  <img border="0"
+    src="https://note.youdao.com/yws/api/personal/file/WEBaa277ec6a3a8fb19be7b7515935f8554?method=download&shareKey=f6b4d45bc88ecad46c6bc44a381c9947"
+    alt=“图片错误”>
+</div>
+<p>二代故事是开始于一代结束的八年后，当初与李逍遥住在同一个村子的邻居——王小虎，已经是一位十八岁的成熟青年。想当年年纪虽小，却很有孝心，
+  不怕风浪独自上仙灵岛为父求药的事迹一直让大家们津津乐道，个性坚毅刚强，做事执着且有决心，从小视逍遥为偶像，虽然逍遥后来未收小虎为徒，
+  但小虎心中笃定要成为如李逍遥一样的大侠；名满江湖、除魔卫道，是永远不变的目标。
+  此时的神州大地，因为八年前锁妖塔崩毁，万千妖魔尽出，天下大乱，幸有一位得道高僧——千叶禅师的出现，广纳门徒成立大慈悲明宗，四处传道布施、
+  救灾救人，与蜀山仙剑派掌门人李逍遥同为正道的两大领袖。另一方面，魔族掌旗使孔璘，也趁机扩展势力，进行一项可怕的阴谋，意图染指人间。
+  王小虎与三位女主角便是在这样的一个时空背景，交织出一段充满亲情、友情、爱情的传奇故事。到底王小虎是如何踏上旅程、和几位女主角是如何结识
+  且发生动人情事、如何卷入一连串安排好的阴谋中而不自觉、又如何在千叶禅师的帮助下，对抗那可怕的魔头孔璘……</p>
+<h3>主角介绍</h3>
+<h4>王小虎</h4> <img border="0"
+  src="https://note.youdao.com/yws/api/personal/file/WEBbb876670ec13eafab070f00fbf939946?method=download&shareKey=da56afec7db8ef6f655866ac6ce38208"
+  alt=“图片错误”>
+<p>《仙剑奇侠传二》男主角。初入江湖的热血少年，敢作敢当、负责任感、积极务实，正义感很强，相信人定胜天的道理。也由于个性使然，
+  所以讨厌所有可能危及周遭亲人、好友，甚至延伸到世人的恶势力，而这种强烈的使命感，也因为渐渐成熟与经历许多事情后，一股正气慢
+  慢延伸愿意保护所有善良的人与正确的事上面，却通常不考虑自己有没有能力对付。
+  在武功方面，在知道无望成为李逍遥徒弟，从10岁起跟着李大娘锻炼掌法外功，苦学苦练，根基扎实，目标笃定迈向强者之路，遇到挫折打
+  击也不屈不挠、勇往直前，希望能悟出属于自己的武学之道。</p>
+<h4>沈欺霜</h4> <img border="0"
+  src="https://note.youdao.com/yws/api/personal/file/WEBfe83f1f2d2098ae9ed6243ab4adc89d4?method=download&shareKey=2ac1ec1bcab64840e34f1857f8e7d9c5"
+  alt=“图片错误”>
+<p>《仙剑奇侠传二》第一女主角。峨嵋山仙霞派掌门清柔师太座下弟子，与四位师姐妹合称「仙霞五奇」，排行第四，使得是仙霞派的剑术绝学，
+  近年来在江湖上四处斩妖除魔、行侠仗义而声名大噪。
+  个性较为害羞内向，温婉和顺，因为从小在父亲与师父严苛的教诲下成长，虽心中有主见与思想却不太敢表达，很在意别人的感受，所以显得略
+  微拘谨与软弱，对别人说话时很客气、斯文；但有勇气、韧性强、肯吃苦，其实是个外柔内刚的女生。
+  因为从小逆来顺受的环境造成了没有什么主要目标的生活态度，即使入了仙霞派后，习得上乘武学，也并没有想要追求武学顶峰的感觉。后来在
+  江湖中闯荡，才渐渐感觉到一种想要帮助人的心，觉得应该尽自己所能，帮助一切应该帮助的事情。</p>
+<h4>苏媚</h4> <img border="0"
+  src="https://note.youdao.com/yws/api/personal/file/WEB93d7ddf3179f99b9aa0c85c3a82bcb9a?method=download&shareKey=9e24004001f2c4a02848c03e82e1b0ee"
+  alt=“图片错误”>
+<p>《仙剑奇侠传二》第二女主角。个性直接坦率、爽朗无心机，带给人相当骄傲任性的感觉，狠辣与智能兼备。由于从小的孤苦无依，只有互相利
+  用才能生存的环境，在心中筑起了不易信任人的防备心。其它部分则是谜团。</p>
+<h4>喻南松</h4> <img border="0"
+  src="https://note.youdao.com/yws/api/personal/file/WEB24be79b7ff33f518f450c7cf403fd82b?method=download&shareKey=b561800ec6f1c590976a695052420042"
+  alt=“图片错误”>
+<p>《仙剑奇侠传二》第二男主角。山东喻家庄人，幼年时全家惨遭魔族杀害。少年时与王小虎、沈欺霜结为好友，并有幸被千叶禅师收入门下。喻南
+  松等千叶门人四处除魔卫道，为解救苍生做出巨大贡献。武艺高超，习得师父千叶禅师所传上等法术，凭着能力成为千叶得力助手，实质却被千叶
+  利用。最后因为与王小虎三人交战并战败，被师父千叶禅师杀死，在禁咒空间壮烈牺牲。</p>
+<h3>游戏评价</h3>
+<p>仙二销量不错，但口碑却不佳。作为时隔八年的仙剑续作，玩家们对仙二充满了期待，期待仙二能够再创辉煌。
+  “等待，只为一次更凄美的感动”。然而，玩家等来了是和新仙剑如出一辙全无新意的系统引擎、毫无改进的画面风格、
+  乏善可陈的除魔卫道。这一切让玩家的心理形成极大的落差，他们接受不了，于是他们批判，批判仙二，不配“仙剑奇侠传”这个名字。</p>
