--- a/仙剑奇侠传三.html
+++ b/仙剑奇侠传三.html
@@ -1,45 +1,55 @@
 ---
 layout: page1
-title: 仙剑奇侠传二
+title: 仙剑奇侠传三
 ---
-    <h1>仙剑奇侠传三</h1>
-    <h3>剧情简述</h3>
-    <div align="center">
-      <img border="0" src ="https://note.youdao.com/yws/api/personal/file/WEBaa277ec6a3a8fb19be7b7515935f8554?method=download&shareKey=f6b4d45bc88ecad46c6bc44a381c9947"  width=500" height="300" alt=“图片错误”>
-    </div>
-    <p>《仙剑奇侠传三》故事发生在《仙剑》第一代的五十年前，那时候，李三思刚刚发出赤子的第一声啼哭；巫后还是襁褓中的婴儿，而剑圣，则还没有拜入蜀山修仙。
-        事情的起因是从锁妖塔顶端突然坍塌，封印被解除开始的，但是，更深层的因果却要追溯到千年前的神界。神将军飞蓬与魔尊重楼因两界的冲突而屡屡交手，一直
-        难分胜负，两人逐渐有惺惺相惜之意。重楼提出要和飞蓬在自己发现的一处新仙界中决斗，一较高下，飞蓬碍于神界天规而犹豫再三，最终经不起重楼诱惑而答允。
-        两人势均力敌，比试旷日持久，最终惊动了天庭，天帝派兵捉拿飞蓬问罪，飞蓬因感知到追兵将至而分心，佩剑被重楼打落人间而落败。光阴荏苒，飞蓬被神界问罪
-        贬为人，经过多次转世成为渝州唐门永安当铺伙计景天。景天得到魔剑的同时，结识了唐门小姐雪见，从此改变了自己的生活。
-        一开始被卷入雪见家族的内部斗争以及唐门和霹雳堂的争斗之中，而后遇到蜀山弃徒长卿及其未婚妻紫萱，景天走上了协助蜀山寻找五灵珠，封印锁妖塔的漫漫征途。
-        一直隐藏在魔剑中的鬼魂化身而出，竟然是景天前世龙阳的妹妹龙葵。几个人的情爱纠葛，生离死别反复交织纠缠，雪见的离奇身世，紫萱不为人知的秘密，龙葵长久
-        以来的心中愿望。伴随着人类与妖界死生存亡的争斗，而其实人的欲望，才是所有纷争的本源。</p>
-    <h3>主角介绍</h3>
-    <h4>景天</h4> <img border="0" src ="https://note.youdao.com/yws/api/personal/file/WEBbb876670ec13eafab070f00fbf939946?method=download&shareKey=da56afec7db8ef6f655866ac6ce38208"  width=500" height="300" alt=“图片错误”>
-    <p>《仙剑奇侠传三》男主角。唐门在渝州开设的最大当铺——永安当的伙计，司“管饰”一职，专门保管当铺收押的首饰珠宝类贵重物品，景天不但有鉴别古董、珠宝的天赋，
-        而且对买卖、账目能很精通，对保管的当品更有过目不忘的本事。每日幻想有朝一日能富甲天下或成为人人景仰的蜀山剑仙。是神将飞蓬的转世。</p>  
-    <h4>唐雪见</h4> <img border="0" src ="https://note.youdao.com/yws/api/personal/file/WEBfe83f1f2d2098ae9ed6243ab4adc89d4?method=download&shareKey=2ac1ec1bcab64840e34f1857f8e7d9c5"  width=500" height="300" alt=“图片错误”>
-    <p>《仙剑奇侠传三》第一女主角。神女夕瑶所塑造，唐门掌门唐坤之最宠爱的孙女，除了限于唐门毒术不能传女的门规之外，其他文学武功医术全部倾囊传授。个性娇纵任性，
-        借着唐家的名头，在江湖上也小有名气。唐坤年老病重，家族内部权利斗争加剧，雪见偷解药时无意间窃听到同门阴谋并阴差阳错盗走五毒兽，因此遭同门追杀。后唐坤
-        病逝而倍受排挤欺凌，在夺得掌门之位后身世被揭开后用花楹解了整个唐家堡的毒后因不屑唐门内部的纷争而离开唐家堡，从此与景天浪迹天涯。</p>
-    <h4>龙葵</h4> <img border="0" src ="https://note.youdao.com/yws/api/personal/file/WEB93d7ddf3179f99b9aa0c85c3a82bcb9a?method=download&shareKey=9e24004001f2c4a02848c03e82e1b0ee"  width=500" height="300" alt=“图片错误”>
-    <p>《仙剑奇侠传三》第二女主角。古国姜国公主，因国都被敌国围困，太子龙阳欲铸魔剑而解兵危，剑未铸成而城破。国破家亡绝望之际龙葵跃入铸剑炉自尽，魔剑因室女之
-        血而天成……从此龙葵的魂魄和魔剑结为一体，成为流落人间的孤魂野鬼，并在千年的修炼过程中，性格分为两个。</p>
-    <h4>紫萱</h4> <img border="0" src ="https://note.youdao.com/yws/api/personal/file/WEB24be79b7ff33f518f450c7cf403fd82b?method=download&shareKey=b561800ec6f1c590976a695052420042"  width=500" height="300" alt=“图片错误”>
-    <p>《仙剑奇侠传三》第三女主角。女娲族后裔，饱受情爱煎熬之苦，与第一世恋人相遇时对方已经婚配，两人相爱而不能相守，恋人郁郁而终；与第二世林业平虽结为连理，
-        但紫萱不老不死，对方人生几十年匆匆而逝，也留下了遗憾；这一世紫萱暗暗布局，因而想让其长生不老，一生厮守，还要令自己摆脱女娲族宿命。</p>
-    <h3>游戏评价</h3>
-    <p>仙剑五灵六界世界观奠基作。仙剑三是仙剑一之后，整个团队最为用心，同时也因为仙剑二项目同时上马，压力全部被转接，开发时长、环境都极其充裕优越（仙4吃这个亏吃大了）的一作，
-        最大的特色就是苦心孤诣多年，因此气吞山河；精雕细琢，因此慢工出细活。个人觉得在仙剑系列里可以算得上数一数二的方面有：庞大恢宏，气势磅礴的剧情设定，饱满细腻，几无短板
-        的人物刻画。开场就是仙剑系列最佳开场动画。主线剧情飞蓬、龙阳、景天跨越千年、历经三世，每一世的羁绊和痕迹都在剧情中完美呈现；主线任务横跨人仙鬼魔神五界（逼得外传问情篇
-        和仙剑四只能在妖界上下功夫），打遍天下却又并不蜻蜓点水，极大丰富并奠基了仙剑世界观。拥有实时好感度设定，以及好感度设定下出现的五个结局，给予玩家的选择和自由前所未有，
-        更令人震惊的是，这五个结局，一个完美结局令玩家心情舒畅津津乐道，另外四个结局无一不动人至深，无论哪一个都能完美完结这个千年宿命的壮阔故事。除景天之外，紫萱与长卿的三
-        世故事，蜀山派的风风雨雨，重楼与景天、紫萱的情愫，唐家堡动荡和神树夕瑶故事里的雪见，龙葵的千年等待与分裂后红蓝双葵的内心纠葛，再加上无数动人的支线，仙剑三在剧情丰富程度、
-        人物性格刻画，以及情节铺陈的眼界、世界观上几乎没有其他仙剑续作可及：然而最令人称赞的是：在如此细腻、转折多、人物纠葛复杂的剧情走向里，角色的台词、行为丝毫不矫情，
-        这点才最为难能可贵。
-        最有趣的战斗系统，最丰富的可玩性。仙剑三及其外传的五灵站位半即时制战斗系统毫无疑问是仙剑系列最有趣，最值得钻研，最不令人厌烦的战斗系统。五行仙术熟练度系统使得玩家主动采
-        取各类打法，无法忽视仙术；根据五灵站位导致的仙术相克，站位竖排或者横排连击、近程远程攻击手段相区分与吟唱时间导致的可以根据进度条打时间差、合体技、魔剑技，以及大量作用古
-        怪但是又屡有奇效的道具，后来所有的续作糟糕无聊的回合制打斗，都简直是一种可怕的倒退。除了战斗本身，仙剑三的魔剑养成系统，尸块冶炼系统，以及时不时出现的小游戏，古董鉴定，
-        购买道具时搞笑的砍价系统，以及每一个巧思无数，令人拍案叫绝，绝非走完就算的迷宫（相比外传问路篇纯粹扩大迷宫的规模，当然是仙三这类构思精巧的解谜式迷宫更讨人喜欢，也更有成就感），
-        外加迷宫中角色机关、角色宝箱，后期可以御剑飞行后满世界乱跑寻找乐趣，而不是只想着延续剧情的玩家，不在少数。</p>
+<h1>仙剑奇侠传三</h1>
+<h3>剧情简述</h3>
+<div align="center">
+    <img border="0"
+        src="https://note.youdao.com/yws/api/personal/file/WEBaa277ec6a3a8fb19be7b7515935f8554?method=download&shareKey=f6b4d45bc88ecad46c6bc44a381c9947"
+        width=500" height="300" alt=“图片错误”>
+</div>
+<p>《仙剑奇侠传三》故事发生在《仙剑》第一代的五十年前，那时候，李三思刚刚发出赤子的第一声啼哭；巫后还是襁褓中的婴儿，而剑圣，则还没有拜入蜀山修仙。
+    事情的起因是从锁妖塔顶端突然坍塌，封印被解除开始的，但是，更深层的因果却要追溯到千年前的神界。神将军飞蓬与魔尊重楼因两界的冲突而屡屡交手，一直
+    难分胜负，两人逐渐有惺惺相惜之意。重楼提出要和飞蓬在自己发现的一处新仙界中决斗，一较高下，飞蓬碍于神界天规而犹豫再三，最终经不起重楼诱惑而答允。
+    两人势均力敌，比试旷日持久，最终惊动了天庭，天帝派兵捉拿飞蓬问罪，飞蓬因感知到追兵将至而分心，佩剑被重楼打落人间而落败。光阴荏苒，飞蓬被神界问罪
+    贬为人，经过多次转世成为渝州唐门永安当铺伙计景天。景天得到魔剑的同时，结识了唐门小姐雪见，从此改变了自己的生活。
+    一开始被卷入雪见家族的内部斗争以及唐门和霹雳堂的争斗之中，而后遇到蜀山弃徒长卿及其未婚妻紫萱，景天走上了协助蜀山寻找五灵珠，封印锁妖塔的漫漫征途。
+    一直隐藏在魔剑中的鬼魂化身而出，竟然是景天前世龙阳的妹妹龙葵。几个人的情爱纠葛，生离死别反复交织纠缠，雪见的离奇身世，紫萱不为人知的秘密，龙葵长久
+    以来的心中愿望。伴随着人类与妖界死生存亡的争斗，而其实人的欲望，才是所有纷争的本源。</p>
+<h3>主角介绍</h3>
+<h4>景天</h4> <img border="0"
+    src="https://note.youdao.com/yws/api/personal/file/WEBbb876670ec13eafab070f00fbf939946?method=download&shareKey=da56afec7db8ef6f655866ac6ce38208"
+    width=500" height="300" alt=“图片错误”>
+<p>《仙剑奇侠传三》男主角。唐门在渝州开设的最大当铺——永安当的伙计，司“管饰”一职，专门保管当铺收押的首饰珠宝类贵重物品，景天不但有鉴别古董、珠宝的天赋，
+    而且对买卖、账目能很精通，对保管的当品更有过目不忘的本事。每日幻想有朝一日能富甲天下或成为人人景仰的蜀山剑仙。是神将飞蓬的转世。</p>
+<h4>唐雪见</h4> <img border="0"
+    src="https://note.youdao.com/yws/api/personal/file/WEBfe83f1f2d2098ae9ed6243ab4adc89d4?method=download&shareKey=2ac1ec1bcab64840e34f1857f8e7d9c5"
+    width=500" height="300" alt=“图片错误”>
+<p>《仙剑奇侠传三》第一女主角。神女夕瑶所塑造，唐门掌门唐坤之最宠爱的孙女，除了限于唐门毒术不能传女的门规之外，其他文学武功医术全部倾囊传授。个性娇纵任性，
+    借着唐家的名头，在江湖上也小有名气。唐坤年老病重，家族内部权利斗争加剧，雪见偷解药时无意间窃听到同门阴谋并阴差阳错盗走五毒兽，因此遭同门追杀。后唐坤
+    病逝而倍受排挤欺凌，在夺得掌门之位后身世被揭开后用花楹解了整个唐家堡的毒后因不屑唐门内部的纷争而离开唐家堡，从此与景天浪迹天涯。</p>
+<h4>龙葵</h4> <img border="0"
+    src="https://note.youdao.com/yws/api/personal/file/WEB93d7ddf3179f99b9aa0c85c3a82bcb9a?method=download&shareKey=9e24004001f2c4a02848c03e82e1b0ee"
+    width=500" height="300" alt=“图片错误”>
+<p>《仙剑奇侠传三》第二女主角。古国姜国公主，因国都被敌国围困，太子龙阳欲铸魔剑而解兵危，剑未铸成而城破。国破家亡绝望之际龙葵跃入铸剑炉自尽，魔剑因室女之
+    血而天成……从此龙葵的魂魄和魔剑结为一体，成为流落人间的孤魂野鬼，并在千年的修炼过程中，性格分为两个。</p>
+<h4>紫萱</h4> <img border="0"
+    src="https://note.youdao.com/yws/api/personal/file/WEB24be79b7ff33f518f450c7cf403fd82b?method=download&shareKey=b561800ec6f1c590976a695052420042"
+    width=500" height="300" alt=“图片错误”>
+<p>《仙剑奇侠传三》第三女主角。女娲族后裔，饱受情爱煎熬之苦，与第一世恋人相遇时对方已经婚配，两人相爱而不能相守，恋人郁郁而终；与第二世林业平虽结为连理，
+    但紫萱不老不死，对方人生几十年匆匆而逝，也留下了遗憾；这一世紫萱暗暗布局，因而想让其长生不老，一生厮守，还要令自己摆脱女娲族宿命。</p>
+<h3>游戏评价</h3>
+<p>仙剑五灵六界世界观奠基作。仙剑三是仙剑一之后，整个团队最为用心，同时也因为仙剑二项目同时上马，压力全部被转接，开发时长、环境都极其充裕优越（仙4吃这个亏吃大了）的一作，
+    最大的特色就是苦心孤诣多年，因此气吞山河；精雕细琢，因此慢工出细活。个人觉得在仙剑系列里可以算得上数一数二的方面有：庞大恢宏，气势磅礴的剧情设定，饱满细腻，几无短板
+    的人物刻画。开场就是仙剑系列最佳开场动画。主线剧情飞蓬、龙阳、景天跨越千年、历经三世，每一世的羁绊和痕迹都在剧情中完美呈现；主线任务横跨人仙鬼魔神五界（逼得外传问情篇
+    和仙剑四只能在妖界上下功夫），打遍天下却又并不蜻蜓点水，极大丰富并奠基了仙剑世界观。拥有实时好感度设定，以及好感度设定下出现的五个结局，给予玩家的选择和自由前所未有，
+    更令人震惊的是，这五个结局，一个完美结局令玩家心情舒畅津津乐道，另外四个结局无一不动人至深，无论哪一个都能完美完结这个千年宿命的壮阔故事。除景天之外，紫萱与长卿的三
+    世故事，蜀山派的风风雨雨，重楼与景天、紫萱的情愫，唐家堡动荡和神树夕瑶故事里的雪见，龙葵的千年等待与分裂后红蓝双葵的内心纠葛，再加上无数动人的支线，仙剑三在剧情丰富程度、
+    人物性格刻画，以及情节铺陈的眼界、世界观上几乎没有其他仙剑续作可及：然而最令人称赞的是：在如此细腻、转折多、人物纠葛复杂的剧情走向里，角色的台词、行为丝毫不矫情，
+    这点才最为难能可贵。
+    最有趣的战斗系统，最丰富的可玩性。仙剑三及其外传的五灵站位半即时制战斗系统毫无疑问是仙剑系列最有趣，最值得钻研，最不令人厌烦的战斗系统。五行仙术熟练度系统使得玩家主动采
+    取各类打法，无法忽视仙术；根据五灵站位导致的仙术相克，站位竖排或者横排连击、近程远程攻击手段相区分与吟唱时间导致的可以根据进度条打时间差、合体技、魔剑技，以及大量作用古
+    怪但是又屡有奇效的道具，后来所有的续作糟糕无聊的回合制打斗，都简直是一种可怕的倒退。除了战斗本身，仙剑三的魔剑养成系统，尸块冶炼系统，以及时不时出现的小游戏，古董鉴定，
+    购买道具时搞笑的砍价系统，以及每一个巧思无数，令人拍案叫绝，绝非走完就算的迷宫（相比外传问路篇纯粹扩大迷宫的规模，当然是仙三这类构思精巧的解谜式迷宫更讨人喜欢，也更有成就感），
+    外加迷宫中角色机关、角色宝箱，后期可以御剑飞行后满世界乱跑寻找乐趣，而不是只想着延续剧情的玩家，不在少数。</p>
