--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@ title: 总介绍
   赵灵儿所居之仙灵岛意外遭人袭击，李逍遥遂担任起护送灵儿往苗疆寻母的重任。
   在旅程中，李逍遥先后结识了林月如、阿奴。在赵灵儿帮助苗人祈雨解旱、惩奸除恶的过程之中，赵灵儿的身世之谜以及她母亲的下落，也终究水落石出。
   此时，拜月教主的阴谋摆在众人的眼前，李逍遥、赵灵儿等人却不知这与拜月教主一战，将会铸成一段永恒的悲剧。</p>
+<script>
+  function myFunction1() {
+    window.open("仙剑奇侠传一.html");
+  }
+</script>
+<div align="center">
+  <button type="button" class="button1" onclick="myFunction1()">戳我看详细</button>
+</div>
 <h3>新仙剑奇侠传</h3>
 <div align="center">
   <div class="dropdown">
@@ -39,6 +47,14 @@ title: 总介绍
 <p>《新仙剑奇侠传》于2001年07月15日发行。
   该作是以《仙剑奇侠传》第一代游戏为基础重新制作，润色了部分剧情，大大提高了大部分场景的画面质量。
   所有角色如主角、敌人、神鬼灵兽等一律依角色的个性重新绘制；游戏剧本除原剧情架构外，也增加了部分支线和隐藏结局。</p>
+<script>
+  function myFunction2() {
+    window.open("新仙剑奇侠传.html");
+  }
+</script>
+<div align="center">
+  <button type="button" class="button2" onclick="myFunction2()">戳我看详细</button>
+</div>
 <h3>仙剑奇侠传二</h3>
 <div align="center">
   <div class="dropdown">
@@ -53,10 +69,19 @@ title: 总介绍
     </div>
   </div>
 </div>
+
 <p>《仙剑奇侠传二》于2003年1月上市。二代故事发生在一代的8年之后，剧情紧接一代，
   围绕王小虎、沈欺霜、苏媚、李忆如展开，讲述四人交织出一段错综复杂的故事。
   一代的主角以及全新人物在二代中出现，交待了前后两代发生过以及即将发生的感情恩怨纠葛。
   本作首次出现了御灵、虎煞、阵术、养蛊、喂毒等多种战斗和养成系统，战斗采用45度视角斜向以及全动态同步回合制的攻防方式。</p>
+<script>
+  function myFunction3() {
+    window.open("仙剑奇侠传二.html");
+  }
+</script>
+<div align="center">
+  <button type="button" class="button3" onclick="myFunction3()">戳我看详细</button>
+</div>
 <h3>仙剑奇侠传三</h3>
 <div align="center">
   <div class="dropdown">
@@ -74,6 +99,14 @@ title: 总介绍
 <p>《仙剑奇侠传三》是国产单机角色扮演游戏《仙剑奇侠传》系列的第三代作品，由大宇资讯股份有限公司旗下的软星科技（上海）有限公司研发，于2003年8月4日在中国内地正式发行。
   本作的主题为“轮回”，故事环绕在两把剑，述说主角两个前世与今生的纠葛。剧情年代设为《仙剑奇侠传》故事初代50年前、《仙剑奇侠传二》58年前。
   本作被评为2003年最出色的RPG之一，后于2008年被改编成同名电视剧。</p>
+<script>
+  function myFunction4() {
+    window.open("仙剑奇侠传三.html");
+  }
+</script>
+<div align="center">
+  <button type="button" class="button1" onclick="myFunction4()">戳我看详细</button>
+</div>
 <h3>仙剑奇侠传三外传：问情篇</h3>
 <div align="center">
   <div class="dropdown">
@@ -93,6 +126,14 @@ title: 总介绍
   作为外传，它的立意就是解开前作中那些未解开的谜团，将仙剑系列作品做一个总结性的贯穿，连接起前三作的剧情，起着承上启下的作用。
   在游戏中《仙剑奇侠传三》的主角及《仙剑奇侠传一》的不少角色都出现在在主线或分支剧情中。
   因此，《仙剑奇侠传三外传·问情篇》既是一个新的故事，也是一场旧的回忆。</p>
+<script>
+  function myFunction5() {
+    window.open("仙剑奇侠传三外传：问情篇.html");
+  }
+</script>
+<div align="center">
+  <button type="button" class="button2" onclick="myFunction5()">戳我看详细</button>
+</div>
 <h3>仙剑奇侠传四</h3>
 <div align="center">
   <div class="dropdown">
@@ -111,6 +152,14 @@ title: 总介绍
   也是系列单机游戏《仙剑奇侠传》的第五部作品，于2007年8月1日上市。
   游戏的主题为“寻仙”，并首次以3D真人比例制作，讲述了少年云天河结识陵墓大盗韩菱纱、寿阳千金柳梦璃和琼华弟子慕容紫英
   以及在寻仙的路上遇到的种种经历，并得出“欲求仙道先修人道”结论的故事。</p>
+<script>
+  function myFunction6() {
+    window.open("仙剑奇侠传四.html");
+  }
+</script>
+<div align="center">
+  <button type="button" class="button3" onclick="myFunction6()">戳我看详细</button>
+</div>
 <h3>仙剑奇侠传五</h3>
 <div align="center">
   <div class="dropdown">
@@ -128,6 +177,14 @@ title: 总介绍
 <p>《仙剑奇侠传五》是由大宇资讯旗下软星科技（北京）有限公司所制作的一款国产单机中文角色扮演电脑游戏。
   本作是《仙剑奇侠传》系列的第六部作品，主题为“心愿”，剧情发生在《仙剑奇侠传》初代剧情的30多年后，另有其外传性质作品《仙剑奇侠传五前传》。除了游戏本体之外，还有三部DLC，分别为《魔灵幻像》《暮雨今夕》《前尘若梦》。 [1]
   游戏已于2011年7月7日两岸三地同步上市 。根据游戏改编的电视剧《仙剑云之凡》于2015年7月10日开机。</p>
+<script>
+  function myFunction7() {
+    window.open("仙剑奇侠传五.html");
+  }
+</script>
+<div align="center">
+  <button type="button" class="button1" onclick="myFunction7()">戳我看详细</button>
+</div>
 <h3>仙剑奇侠传五前传</h3>
 <div align="center">
   <div class="dropdown">
@@ -145,6 +202,14 @@ title: 总介绍
 <p>《仙剑奇侠传五前传》是由大宇资讯旗下软星科技（北京）有限公司研发的一款电脑单机角色扮演游戏。
   本作是《仙剑奇侠传》系列的第七部作品，故事主题为“牵绊”，剧情发生年代为《仙剑奇侠传五》故事背景二十多年前。
   游戏已于2013年1月15日上市 ，另有DLC《梦华幻斗》于2013年6月25日发布 。</p>
+<script>
+  function myFunction8() {
+    window.open("仙剑奇侠传五前传.html");
+  }
+</script>
+<div align="center">
+  <button type="button" class="button2" onclick="myFunction8()">戳我看详细</button>
+</div>
 <h3>仙剑奇侠传六</h3>
 <div align="center">
   <div class="dropdown">
@@ -162,6 +227,14 @@ title: 总介绍
 <p>《仙剑奇侠传六》是由大宇资讯旗下软星科技（北京）有限公司制作一款单机角色扮演电脑游戏，已于2015年7月8日上市。
   该作是《仙剑奇侠传》系列游戏的第八部单机作品，同时也是仙剑二十周年之作，讲述了越今朝和越祈在为寻找丢失的某样东西时，
   无意中揭开了尘封的秘密的故事。</p>
+<script>
+  function myFunction9() {
+    window.open("仙剑奇侠传六.html");
+  }
+</script>
+<div align="center">
+  <button type="button" class="button3" onclick="myFunction9()">戳我看详细</button>
+</div>
 <h3>仙剑奇侠传七</h3>
 <div align="center">
   <div class="dropdown">
@@ -182,3 +255,11 @@ title: 总介绍
   2020年12月29日，该作发布由周深演唱的主题曲《相守》。
   2021年1月6日，开启试玩预约；1月15日，试玩正式开启。
   2021年7月8日，与英伟达共同发布新的光追演示视频.预计2021年第四季或2022年初发布。</p>
+<script>
+  function myFunction10() {
+    window.open("仙剑奇侠传七.html");
+  }
+</script>
+<div align="center">
+  <button type="button" class="button1" onclick="myFunction10()">戳我看详细</button>
+</div>
