--- a/仙剑奇侠传三.html
+++ b/仙剑奇侠传三.html
@@ -7,7 +7,7 @@ title: 仙剑奇侠传三
 <div align="center">
     <img border="0"
         src="https://note.youdao.com/yws/api/personal/file/WEB8c55f4344c43b7669b586478257d334e?method=download&shareKey=7b19d79f82489ab64fc806d723a0effc"
-        width=500" height="300" alt=“图片错误”>
+        alt=“图片错误”>
 </div>
 <p>《仙剑奇侠传三》故事发生在《仙剑》第一代的五十年前，那时候，李三思刚刚发出赤子的第一声啼哭；巫后还是襁褓中的婴儿，而剑圣，则还没有拜入蜀山修仙。
     事情的起因是从锁妖塔顶端突然坍塌，封印被解除开始的，但是，更深层的因果却要追溯到千年前的神界。神将军飞蓬与魔尊重楼因两界的冲突而屡屡交手，一直
@@ -20,23 +20,23 @@ title: 仙剑奇侠传三
 <h3>主角介绍</h3>
 <h4>景天</h4> <img border="0"
     src="https://note.youdao.com/yws/api/personal/file/WEBc4426123f6636b68ff7600eacf6f8b92?method=download&shareKey=999fbb60351f006a53128b135c70a832"
-    width=500" height="300" alt=“图片错误”>
+    alt=“图片错误”>
 <p>《仙剑奇侠传三》男主角。唐门在渝州开设的最大当铺——永安当的伙计，司“管饰”一职，专门保管当铺收押的首饰珠宝类贵重物品，景天不但有鉴别古董、珠宝的天赋，
     而且对买卖、账目能很精通，对保管的当品更有过目不忘的本事。每日幻想有朝一日能富甲天下或成为人人景仰的蜀山剑仙。是神将飞蓬的转世。</p>
 <h4>唐雪见</h4> <img border="0"
     src="https://note.youdao.com/yws/api/personal/file/WEBd7865b570b421d2fb1d4756ac735c585?method=download&shareKey=4fb17c0aa11c47e2c0a63c2877ea4598"
-    width=500" height="300" alt=“图片错误”>
+    alt=“图片错误”>
 <p>《仙剑奇侠传三》第一女主角。神女夕瑶所塑造，唐门掌门唐坤之最宠爱的孙女，除了限于唐门毒术不能传女的门规之外，其他文学武功医术全部倾囊传授。个性娇纵任性，
     借着唐家的名头，在江湖上也小有名气。唐坤年老病重，家族内部权利斗争加剧，雪见偷解药时无意间窃听到同门阴谋并阴差阳错盗走五毒兽，因此遭同门追杀。后唐坤
     病逝而倍受排挤欺凌，在夺得掌门之位后身世被揭开后用花楹解了整个唐家堡的毒后因不屑唐门内部的纷争而离开唐家堡，从此与景天浪迹天涯。</p>
 <h4>龙葵</h4> <img border="0"
     src="https://note.youdao.com/yws/api/personal/file/WEB99de773660dc0944f6bd772821d99fbd?method=download&shareKey=214adf8b2ff954f425123786362f348f"
-    width=500" height="300" alt=“图片错误”>
+    alt=“图片错误”>
 <p>《仙剑奇侠传三》第二女主角。古国姜国公主，因国都被敌国围困，太子龙阳欲铸魔剑而解兵危，剑未铸成而城破。国破家亡绝望之际龙葵跃入铸剑炉自尽，魔剑因室女之
     血而天成……从此龙葵的魂魄和魔剑结为一体，成为流落人间的孤魂野鬼，并在千年的修炼过程中，性格分为两个。</p>
 <h4>紫萱</h4> <img border="0"
     src="https://note.youdao.com/yws/api/personal/file/WEB3f6ff2ebddd066d8b1f7f8877a0289d8?method=download&shareKey=aadf4063bda267ee915b245dd0666d64"
-    width=500" height="300" alt=“图片错误”>
+    alt=“图片错误”>
 <p>《仙剑奇侠传三》第三女主角。女娲族后裔，饱受情爱煎熬之苦，与第一世恋人相遇时对方已经婚配，两人相爱而不能相守，恋人郁郁而终；与第二世林业平虽结为连理，
     但紫萱不老不死，对方人生几十年匆匆而逝，也留下了遗憾；这一世紫萱暗暗布局，因而想让其长生不老，一生厮守，还要令自己摆脱女娲族宿命。</p>
 <h3>游戏评价</h3>
