--- a/仙剑奇侠传四.html
+++ b/仙剑奇侠传四.html
@@ -7,7 +7,7 @@ title: 仙剑奇侠传四
 <div align="center">
     <img border="0"
         src="https://note.youdao.com/yws/api/personal/file/WEB60727ef5bcc4160a9373c21e218853ee?method=download&shareKey=b57a9fde5cd774cd1565ed0786bedc4c"
-        width=500" height="300" alt=“图片错误”>
+        alt=“图片错误”>
 </div>
 <p>十九年前，琼华派利用望舒和羲和双剑网缚妖界，从中夺取灵力，引发人妖大战，双方伤亡惨重。琼华派弟子云天青和夙玉因对琼华派修仙理念产生分歧，离开琼华，
     来到青鸾峰。二人在山上成亲并生下一子云天河。没多久，夙玉去世。年幼的云天河并不清楚父母的往事，而父亲云天青也因病去世，只留他一人在山上长大。
