--- a/仙剑奇侠传六.html
+++ b/仙剑奇侠传六.html
@@ -34,7 +34,7 @@ title: 仙剑奇侠传六
     经历了世事后多了一些温柔包容，也学会偶尔依赖一下朋友，但依旧保留了那份洒脱自信。</p>
 <h4>闲卿</h4> <img border="0"
     src="https://note.youdao.com/yws/api/personal/file/WEB14949cad4072f1002016f190aa4a036d?method=download&shareKey=257428ef4ee8085067d72cb8f36e855e"
-    width=500" height="300" alt=“图片错误”>
+    alt=“图片错误”>
 <p>《仙剑奇侠传六》第二男主角。外表俊朗飘逸、沉静温和，带有文雅之气，但其显露的气质似乎与他表面上的谦谦公子形象并不相同。闲卿是千年狼妖，对很多事情看得比队伍里其
     他人淡，内心实际上是个沉稳可靠的人。在外人面前给人冷、淡定的感觉，其实是因为不在意、随他去的关系。熟识后会说冷笑话，必要时不介意做一些破坏帅哥形象的无赖事乃至
     装傻卖萌。作为一个经历了漫长岁月的妖怪，对很多事情看得比队伍里其他人淡，在意的事也少，不易动摇，内心实际上是个沉稳可靠的人。因为这种不在意，让人有些看不透。比较懒，讨厌做杂事。</p>
