--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 ---
-layout: default
-title: About
+layout: page1
+title: 关于
 ---
-<h1>{{ "This page tells you a little bit about me." | downcase }}</h1>
+<h2>这是一个仙剑奇侠传系列作品的介绍网站，大致介绍了各部作品的主要内用，也是一个静态网站制作的练习。</h2>
