--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 总介绍
+title: 首页
 ---
 <h1>仙剑奇侠传系列介绍</h1>
 <h3>仙剑奇侠传</h3>
@@ -24,7 +24,7 @@ title: 总介绍
   此时，拜月教主的阴谋摆在众人的眼前，李逍遥、赵灵儿等人却不知这与拜月教主一战，将会铸成一段永恒的悲剧。</p>
 <script>
   function myFunction1() {
-    window.open("仙剑奇侠传一.html");
+    window.open("1.html");
   }
 </script>
 <div align="center">
@@ -49,7 +49,7 @@ title: 总介绍
   所有角色如主角、敌人、神鬼灵兽等一律依角色的个性重新绘制；游戏剧本除原剧情架构外，也增加了部分支线和隐藏结局。</p>
 <script>
   function myFunction2() {
-    window.open("新仙剑奇侠传.html");
+    window.open("1_n.html");
   }
 </script>
 <div align="center">
@@ -76,7 +76,7 @@ title: 总介绍
   本作首次出现了御灵、虎煞、阵术、养蛊、喂毒等多种战斗和养成系统，战斗采用45度视角斜向以及全动态同步回合制的攻防方式。</p>
 <script>
   function myFunction3() {
-    window.open("仙剑奇侠传二.html");
+    window.open("2.html");
   }
 </script>
 <div align="center">
@@ -101,7 +101,7 @@ title: 总介绍
   本作被评为2003年最出色的RPG之一，后于2008年被改编成同名电视剧。</p>
 <script>
   function myFunction4() {
-    window.open("仙剑奇侠传三.html");
+    window.open("3.html");
   }
 </script>
 <div align="center">
@@ -128,7 +128,7 @@ title: 总介绍
   因此，《仙剑奇侠传三外传·问情篇》既是一个新的故事，也是一场旧的回忆。</p>
 <script>
   function myFunction5() {
-    window.open("仙剑奇侠传三外传：问情篇.html");
+    window.open("3_q.html");
   }
 </script>
 <div align="center">
@@ -154,7 +154,7 @@ title: 总介绍
   以及在寻仙的路上遇到的种种经历，并得出“欲求仙道先修人道”结论的故事。</p>
 <script>
   function myFunction6() {
-    window.open("仙剑奇侠传四.html");
+    window.open("4.html");
   }
 </script>
 <div align="center">
@@ -179,7 +179,7 @@ title: 总介绍
   游戏已于2011年7月7日两岸三地同步上市 。根据游戏改编的电视剧《仙剑云之凡》于2015年7月10日开机。</p>
 <script>
   function myFunction7() {
-    window.open("仙剑奇侠传五.html");
+    window.open("5.html");
   }
 </script>
 <div align="center">
@@ -204,7 +204,7 @@ title: 总介绍
   游戏已于2013年1月15日上市 ，另有DLC《梦华幻斗》于2013年6月25日发布 。</p>
 <script>
   function myFunction8() {
-    window.open("仙剑奇侠传五前传.html");
+    window.open("5_f.html");
   }
 </script>
 <div align="center">
@@ -229,7 +229,7 @@ title: 总介绍
   无意中揭开了尘封的秘密的故事。</p>
 <script>
   function myFunction9() {
-    window.open("仙剑奇侠传六.html");
+    window.open("6.html");
   }
 </script>
 <div align="center">
@@ -257,7 +257,7 @@ title: 总介绍
   2021年7月8日，与英伟达共同发布新的光追演示视频.预计2021年第四季或2022年初发布。</p>
 <script>
   function myFunction10() {
-    window.open("仙剑奇侠传七.html");
+    window.open("7.html");
   }
 </script>
 <div align="center">
