--- a/3_w.html
+++ b/3_w.html
@@ -1,8 +1,8 @@
 ---
 layout: page1
-title: 仙剑奇侠传三外传-问情篇
+title: 仙剑奇侠传三外传：问情篇
 ---
-<h1>仙剑奇侠传三外传-问情篇</h1>
+<h1>仙剑奇侠传三外传：问情篇</h1>
 <h3>剧情简述</h3>
 <div align="center">
     <img border="0"
