--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ title: 首页
   因此，《仙剑奇侠传三外传·问情篇》既是一个新的故事，也是一场旧的回忆。</p>
 <script>
   function myFunction5() {
-    window.open("3_q.html");
+    window.open("3_w.html");
   }
 </script>
 <div align="center">
