--- a/7.html
+++ b/7.html
@@ -5,31 +5,21 @@ title: 仙剑奇侠传四
 <h1>仙剑奇侠传四</h1>
 <h3>剧情简述</h3>
 <div align="center">
-    <img border="0"
-        src=""
-        alt=“图片错误”>
+    <img border="0" src="" alt=“图片错误”>
 </div>
 <p>。</p>
 <h3>主角介绍</h3>
-<h4>云天河</h4> <img border="0"
-    src=""
-    alt=“图片错误”>
+<h4>云天河</h4> <img border="0" src="" alt=“图片错误”>
 <p>《仙剑奇侠传四》男主角。熟知野外求生的技巧，擅长捕猎野兽。在剑术上天份很高，最喜欢香喷喷的烤肉，梦想吃遍各种不同的野味。对山下世界的一切和男女之情无知，
     等到下山之后，常以自己的想法衡量判断，闯祸和闹笑话都不少。认为万物平等，生老病死，弱肉强食皆是世间常态，更不会有妖和人必须对立的想法，遇麻烦之事会换个
     方向思考，不喜欢自寻烦恼，对于已经认定的事，处理起来很直线思维。</p>
-<h4>韩菱纱</h4> <img border="0"
-    src=""
-    alt=“图片错误”>
+<h4>韩菱纱</h4> <img border="0" src="" alt=“图片错误”>
 <p>《仙剑奇侠传四》第一女主角。常年混迹江湖，有点小聪明，慧黠。遇到看不顺眼的人也会小整对方一下。性格爽快大方。对于熟悉的朋友，常会不在意地揭对方短，而自己
     也不会因被朋友嘲笑而生气。心地善良，常常劫富济贫但不张扬。擅长破解墓穴机关，也懂得风水堪舆之术，年纪小小，技艺也算不错，据说是家学，还自称独行千里的大盗。</p>
-<h4>柳梦璃</h4> <img border="0"
-    src=""
-    alt=“图片错误”>
+<h4>柳梦璃</h4> <img border="0" src="" alt=“图片错误”>
 <p>《仙剑奇侠传四》第二女主角。身为官家小姐，有着大家闺秀的娴雅气质，端庄大方。通晓琴棋书画，尤其在音律方面多有涉猎，擅弹箜篌。聪慧敏锐，更会在关键时刻表现
     出与柔美外表不符的决断。在感情上比较专一，对不相关的人较为冷淡，对喜欢的人则十分体贴，并全心信赖，不吝于表达自己的情感。</p>
-<h4>慕容紫英</h4> <img border="0"
-    src=""
-    alt=“图片错误”>
+<h4>慕容紫英</h4> <img border="0" src="" alt=“图片错误”>
 <p>《仙剑奇侠传四》第二男主角。琼华派弟子，幼年时就被送到仙山修行，入门早，天资聪颖，修为较深。冷峻，稳重，内敛，是一个值得信赖的伙伴。外表冷漠，似乎不太容易
     相处，实则是个重情重义的好男儿。对铸剑养剑之道极为专精痴迷，痛恨一切对剑不尊，有辱宝剑威名的行为。</p>
 <h3>游戏评价</h3>
