--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ title: 首页
   游戏已于2013年1月15日上市 ，另有DLC《梦华幻斗》于2013年6月25日发布 。</p>
 <script>
   function myFunction8() {
-    window.open("5_f.html");
+    window.open("5_w.html");
   }
 </script>
 <div align="center">
